--- a/src/Impsbl.Application/Impsbl.Application.csproj
+++ b/src/Impsbl.Application/Impsbl.Application.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <MonoGamePlatform>DesktopGL</MonoGamePlatform>
   </PropertyGroup>
@@ -17,12 +17,14 @@
   
 
   <ItemGroup>
-    <PackageReference Include="MonoGame.Content.Builder" Version="3.7.0.9" />
-    <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.8.0.13" />
+    <PackageReference Include="MonoGame.Framework.Content.Pipeline" Version="3.8.0.1375-develop" PrivateAssets="All" />
+
+    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1375-develop" />
+    <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1375-develop" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Impsbl.Infrastructure.Screens\Impsbl.Infrastructure.Screens.csproj" />
+    <ProjectReference Include="..\Impsbl.Infrastructure.Screens\Impsbl.Infrastructure.Screens.csproj" />
     <ProjectReference Include="..\Impsbl.Content\Impsbl.Content.csproj" />
     <ProjectReference Include="..\Impsbl\Impsbl.csproj" />
   </ItemGroup>
