--- a/src/Impsbl/Impsbl.csproj
+++ b/src/Impsbl/Impsbl.csproj
@@ -1,11 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <OutputType>Library</OutputType>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>    
-    <ProjectReference Include="..\Impsbl.Content\Impsbl.Content.csproj" />
+    <ProjectReference Include="..\Impsbl.Content\Impsbl.Content.csproj" PrivateAssets="All" />
+    <ProjectReference Include="..\Impsbl.Infrastructure.Spritesheets\Impsbl.Infrastructure.Spritesheets.csproj" />
   </ItemGroup>
 
 </Project>
